tests/wordpress/fail/plugins/advanced-text-widget/advancedtext.php
<?php
/*
Plugin Name: Advanced Text Widget
Plugin URI: 
Description: Text widget that has extensive conditional options to display content on pages, posts, specific categories etc. It supports regular HTML as well as PHP code. This widget is an extension of Daiko's Text Widget by Rune Fjellheim.
Author: Max Chirkov
Version: 2.0.0
Author URI: http://www.ibsteam.net
*/
